--- a/action.yml
+++ b/action.yml
@@ -33,6 +33,9 @@ inputs:
   tf_actions_fmt_write:
     description: 'Write Terragrunt fmt changes to source files.'
     default: false
+  tf_actions_output_field:
+    description: 'Terraform or Terragrunt output field'
+    required: false
 outputs:
   tf_actions_output:
     description: 'The Terragrunt outputs in JSON format.'
